BIN-2666 #comment Adjust .gitignore, rename branding headers.

--- a/.gitignore
+++ b/.gitignore
@@ -7,10 +7,11 @@ Session.vim
 .netrwhist
 *~
 
-### MediaCore Moodle ###
+### Binumi Moodle ###
 /bin/*
 /lib/editor/tinymce/plugins/mediacore/editor_plugin_src.js
 /filter/mediacore/README.md
 /lib/editor/tinymce/plugins/mediacore/README.md
 /local/mediacore/README.md
 /repository/mediacore/README.md
+/.idea/
