--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "description": "Binumi Moodle Plugins",
   "version": "v1.0.0",
   "private": true,
-  "readme":"README.md",
+  "readme": "README.md",
   "repository": {
     "type": "git",
     "url": "git@github.com:Binumi/binumi-moodle.git"
   },
   "devDependencies": {
+    "grunt": "^0.4.5",
+    "grunt-contrib-clean": "^0.6.0",
+    "grunt-contrib-compress": "^0.13.0",
     "shifter": "~0.5.*"
   }
 }
